# binaryninja-functionmatcher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: functionmatcher.cpp
src/sqlite/: database.hpp
